[gd_scene load_steps=3 format=3 uid="uid://cg7kh7584x7xg"]

[ext_resource type="Script" path="res://prefabs/UI/TopBar/TopBar.gd" id="1_122t8"]
[ext_resource type="Theme" uid="uid://duxql3scmd2jj" path="res://theme/Scroll.tres" id="2_xveov"]

[node name="TopBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_122t8")

[node name="UpperInfo" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_vertical = 0

[node name="HSplitContainer" type="HSplitContainer" parent="UpperInfo"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="GaldCounter" type="MarginContainer" parent="UpperInfo/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="GaldLabel" type="Label" parent="UpperInfo/HSplitContainer/GaldCounter"]
layout_mode = 2
theme = ExtResource("2_xveov")
text = "000 Gald"

[node name="InventoryAmt" type="MarginContainer" parent="UpperInfo/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="InventoryLabel" type="Label" parent="UpperInfo/HSplitContainer/InventoryAmt"]
layout_mode = 2
theme = ExtResource("2_xveov")
text = "10/20"
